--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cloud_firestore: ^4.8.5
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.7.3
   firebase_core: ^2.15.1
   flutter:
     sdk: flutter
@@ -39,7 +40,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
- 
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
